# backend/internal/api/router/router.go
@@ -42,18 +42,18 @@ func SetupRouter(store *store.Store, log *logrus.Logger) *gin.Engine {
 		// Set up aircrafts route
 		aircrafts := v1.Group("/aircrafts")
 		{
-			aircrafts.GET("", controllers.GetAllAircraftsHandler(store, log))
-			aircrafts.GET("/:id", controllers.GetAircraftByIdHandler(store, log))
-			aircrafts.GET("/:id/accidents", controllers.GetAccidentByIdHandler(store, log))
-			aircrafts.GET("/:id/images", controllers.GetAllImagesForAircraftHandler(store, log))
-			aircrafts.GET("/:id/images/:imageID", controllers.GetImageForAircraftHandler(store, log))
+			aircrafts.GET("", controllers.GetAircraftsHandler(store, log))
+			// aircrafts.GET("/:id", controllers.GetAircraftByIdHandler(store, log))
+			// aircrafts.GET("/:id/accidents", controllers.GetAccidentByIdHandler(store, log))
+			// aircrafts.GET("/:id/images", controllers.GetAllImagesForAircraftHandler(store, log))
+			// aircrafts.GET("/:id/images/:imageID", controllers.GetImageForAircraftHandler(store, log))
 		}
 
 		// Set up accidents route
 		accidents := v1.Group("/accidents")
 		{
-			accidents.GET("", controllers.GetAllAccidentsHandler(store, log))
-			accidents.GET("/:id", controllers.GetAccidentByIdHandler(store, log))
+			accidents.GET("", controllers.GetAccidentsHandler(store, log))
+			// accidents.GET("/:id", controllers.GetAccidentByIdHandler(store, log))
 		}
 	}
 
